syntax = "proto3";

option go_package = "github.com/AGmarsen/gRPC_Testing/proto";

package proto;

// compile command:
// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative [path to file, ex. proto/template.proto]


// The template service definition.
// you can call it whatever you want
service Template
{
    rpc RequestTime (TimeRequest) returns (ChristianTime);

}

message TimeRequest {
    int64 timeStamp = 1;
}

message ChristianTime {
    int64 actualTime = 1;
    double variation = 2;
}